[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aether"
version = "0.1.0"
description = "Admin authentication and accounts services"
authors = [{name = "Aether", email = "admin@example.com"}]
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiohttp==3.12.15",
    "fastapi==0.118.0",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.6",
    "boto3==1.40.45",
    "sqlalchemy==2.0.43",
    "psycopg[binary]==3.2.10",
    "psycopg2-binary==2.9.10",
    "timescale-vector==0.0.7",
    "aiokafka==0.12.0",
    "nats-py==2.11.0",
    "redis==5.0.4",
    "feast==0.54.0",
    "mlflow==3.4.0",
    "scikit-learn==1.5.2",
    "torch==2.8.0",
    "pyotp==2.9.0",
    "email-validator==2.3.0",
    "prometheus-client==0.23.1",
    "networkx==3.5",
    "argon2-cffi==23.1.0",
    "passlib[argon2]==1.7.4",
    "httpx==0.28.1",
    "requests==2.32.5",
    "websockets==15.0.1",
    "pyyaml==6.0.3",
    "pandas==2.2.3",
    "numpy==2.1.3",
    "reportlab==4.4.4",
    "markdown2==2.5.4",
    "cryptography==45.0.7",
]

[project.optional-dependencies]
test = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "httpx==0.28.1",
]
dev = [
    "black==25.9.0",
    "isort==6.1.0",
    "mypy==1.18.2",
    "ruff==0.13.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

asyncio_mode = "auto"
markers = [
    "unit: unit test suite",
    "integration: integration test suite",
    "slow: end-to-end trading pipeline checks",
    "smoke: smoke tests covering service persistence and deployment wiring",
]

